mariadb-deploy.yml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: mariadb-deployment

spec:

  replicas: 1

  selector:

    matchLabels:

      app: mariadb

  template:

    metadata:

      labels:

        app: mariadb

    spec:

      containers:

      - name: mariadb

        image: hngtech11/mariadb:day1
