wordpress-deploy.yml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: wordpress-deployment

spec:

  replicas: 1

  selector:

    matchLabels:

      app: wordpress

  template:

    metadata:

      labels:

        app: wordpress

    spec:

      containers:

      - name: wordpress

        image: hngtech11/wordpress:day1

        ports:

          - containerPort: 8443

          - containerPort: 8080
