mariadb-service.yml
apiVersion: v1

kind: Service

metadata:

  name: mariadb-service

spec:

  type: NodePort

  selector:

    app: mariadb

  ports:

    - protocol: TCP

      port: 3306

      targetPort: 3306
