wordpress-service.yml
apiVersion: v1

kind: Service

metadata:

  name: wordpress-service

spec:

  type: NodePort

  selector:

    app: wordpress

  ports:

    - protocol: TCP

      port: 8080

      targetPort: 8080

      nodePort: 30000
